--- a/DOM/Index.html
+++ b/DOM/Index.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
 
     <title>Dom</title>
+    <style>
+        body{
+            background-color: #212121;
+            color: antiquewhite;
+        }
+    </style>
 </head>
 
 <body>
     <div class="bg-black">
-        <h1 class="heading">
-            Dom 
-        </h1>
+        <h1 class="heading" id="title">Dom <span style="display: none;">demo</span></h1>
+        <h2>demo text1</h2>
+        <h2>demo text2</h2>
+        <h2>demo text3</h2>
+        <h2>demo text4</h2>
+        <h2>demo text5</h2>
         <p>
            Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
+        <input type="text">
+        <ul>
+            <li class="listitem">chai</li>
+            <li class="listitem">coffee</li>
+            <li class="listitem">milkshake</li>
+        </ul>
     </div>   
 </body>
 </html>
